# rust-lambda

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy-app.yml  lambda-build.yml  remove-app.yml
infra/: backend.ts  cdktf.json  main.ts  package-lock.json  package.json  rds-stack.ts
migrations/: 20230717214834_create_todos.sql
src/: main.rs
