[package]
name = "rust-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-aws-lambda = "0.5.0"
hyper = {version="0.14.26", features=["server"]}
serde = {version="1.0.164", features=["derive"]}
serde_json = "1.0.99"
tokio = {version="1.28.2", features=["full"]}
tower-http = {version="0.4.1", features=["cors", "compression-gzip", 
                                         "compression-deflate", "tokio", 
                                         "trace"]}
tracing = "0.1.37"
tracing-subscriber = {version="0.3.17", features=["json"]}
