[package]
name = "rust-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.7.4"
axum-aws-lambda = "0.6.0"
hyper = {version="1.1.0", features=["server"]}
lambda_http = "0.9.2"
rand = "0.8.5"
serde = {version="1.0.164", features=["derive"]}
serde_json = "1.0.99"
sqlx = {version="0.7.3", features=["postgres", "runtime-tokio-rustls"]}
tokio = {version="1.35.1", features=["full"]}
tower = "0.4.13"
tower-http = {version="0.5.1", features=["cors", "compression-gzip", 
                                         "compression-deflate", "tokio", 
                                         "trace"]}
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18", features=["json"]}
